WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197317
[iOS] Our process assertion should not allow idle sleep
https://bugs.webkit.org/show_bug.cgi?id=197317
Summary
[iOS] Our process assertion should not allow idle sleep
Chris Dumez
Reported
2019-04-26 10:25:57 PDT
Background process assertion should not allow idle sleep. This is bad for power because the device may switch between sleep and awake state frequently, as it get woken up by network packages.
Attachments
Patch
(1.86 KB, patch)
2019-04-26 10:27 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.04 KB, patch)
2019-04-26 10:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-26 10:26:11 PDT
<
rdar://problem/50137740
>
Chris Dumez
Comment 2
2019-04-26 10:27:35 PDT
Created
attachment 368330
[details]
Patch
Chris Dumez
Comment 3
2019-04-26 10:29:42 PDT
Created
attachment 368331
[details]
Patch
Geoffrey Garen
Comment 4
2019-04-26 14:36:45 PDT
Comment on
attachment 368331
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-04-26 15:05:07 PDT
Comment on
attachment 368331
[details]
Patch Clearing flags on attachment: 368331 Committed
r244707
: <
https://trac.webkit.org/changeset/244707
>
WebKit Commit Bot
Comment 6
2019-04-26 15:05:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug