[iOS] Our process assertion should not allow idle sleep https://bugs.webkit.org/show_bug.cgi?id=197317 <rdar://problem/50137740>

Reviewed by Geoffrey Garen.

Our process assertion should not allow idle sleep. This is bad for power because the device
may switch between sleep and awake state frequently, as it get woken up by network packages.

* UIProcess/ios/ProcessAssertionIOS.mm:


Canonical link: https://commits.webkit.org/211542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244707 268f45cc-cd09-0410-ab3c-d52691b4dbfc